--- a/JDWeb/zepto/package.json
+++ b/JDWeb/zepto/package.json
@@ -11,9 +11,9 @@
     "repository": "madrobby/zepto",
     "license": "MIT",
     "devDependencies": {
-        "uglify-js": "2.4.x",
-        "express": "3.1.x",
         "coffee-script": "1.5.x",
-        "shelljs": "0.1.x"
+        "express": "^4.17.1",
+        "shelljs": "0.1.x",
+        "uglify-js": "^3.9.3"
     }
 }
